# framework.security.privilege-checker

./: CMakeLists.txt  project.config
capi/: CMakeLists.txt
capi/include/: privilege_db_manager.h  privilege_info.h  privilege_info_types.h  privilege_manager.h
capi/res/dbspace/: core_privilege_info.csv  core_privilege_info.db  wrt_db_generator.sh  wrt_privilege_info.csv  wrt_privilege_info.db
capi/res/string/: ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  (+19 more)
capi/src/: privilege_checker.c  privilege_db_manager.c  privilege_info.c  privilege_manager.c
checker/: CMakeLists.txt  security-privilege-checker.pc.in
checker/include/: privilege_checker.h  privilege_checker_extension.h
checker/src/: privilege_checker.c  test_framework.c
modules_mobile/capi/res/string/: bg.po  da.po  de_DE.po  el_GR.po  en_US.po  es_ES.po  es_MX.po  eu.po  fr_CA.po  fr_FR.po  ga.po  he.po  hy.po  it_IT.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nl_NL.po  pl.po  pt_PT.po  ro.po  ru_RU.po  sk.po  sv.po  th.po  tr_TR.po  ur.po  uz.po  zh_HK.po
modules_wearable/capi/include/: privilege_info_types.h
modules_wearable/capi/res/string/: ar.po  az.po  bg.po  ca.po  cs.po  da.po  (+49 more)
modules_wearable/packaging/: privilege-checker.manifest
modules_wearable/util/: CMakeLists.txt
modules_wearable/util/include/: Util.h
modules_wearable/util/src/: DbManager.cpp  Main.cpp
packaging/: privilege-checker.spec
test/: CMakeLists.txt  org.tizen.test-privilege-checker.manifest  org.tizen.test-privilege-checker.xml  tc-privilege-checker.c  tc-privilege-checker2.c  tc-privilege-db-manager.c  tc-privilege-hash.c  tc-privilege-info.c  tc-privilege-manager.c
(+1 files in other folders)
